# loopback_singleton

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreate.sh
.github/workflows/: ci.yml  publish.yml
src/loopback_singleton/: __init__.py  api.py  daemon.py  errors.py  factory.py  locking.py  proxy.py  runtime.py  serialization.py  transport.py  version.py
tests/: test_api_service_unit.py  test_api_validation.py  test_daemon_factory_resolution.py  test_daemon_startup.py  test_factory.py  test_integration.py  test_locking.py  test_proxy.py  test_regressions.py  test_runtime.py  test_serialization_and_exports.py  test_transport_unit.py
tests/fixtures_pkg/: services.py
